# GridOnline

./: Cargo.toml  README.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-deploy-frontend.yml  build.yml
grid_client/: Cargo.toml  Dioxus.toml
grid_client/assets/: main.css
grid_client/src/: display.rs  main.rs  scenes.rs  websocket.rs
grid_common/: Cargo.toml
grid_common/src/: lib.rs
grid_server/: Cargo.toml
grid_server/src/: main.rs  model.rs
