[package]
name = "grid_client"
version = "0.1.0"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
grid_common = { path = "../grid_common" }
js-sys = "0.3.77"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
