[package]
name = "grid_client"
version = "0.1.2"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
grid_common = { path = "../grid_common" }
serde.workspace = true
serde_json.workspace = true
ws-queue-web = { git = "https://github.com/JustinHuPrime/ws-queue-web.git" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
