[package]
name = "grid_common"
version = "0.1.1"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "Common data library for Grid, a card game"
homepage = "https://github.com/JustinHuPrime/GridOnline#readme"
repository = "https://github.com/JustinHuPrime/GridOnline"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
