[package]
name = "grid_server"
version = "0.1.3"
authors = ["Justin Hu <justin.hu@alumni.ubc.ca>"]
edition = "2024"
description = "Game server for Grid, a card game"
homepage = "https://github.com/JustinHuPrime/GridOnline#readme"
repository = "https://github.com/JustinHuPrime/GridOnline"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["tokio", "ws"] }
axum-extra = "0.10.1"
clap = { version = "4.5.47", features = ["derive"] }
futures-util = "0.3.31"
grid_common = { path = "../grid_common" }
rand = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.27.0"
